fix: make about visible on mobile

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -58,3 +58,7 @@
         }
     }
 }
+
+.app-footer {
+    margin-bottom: calc(var(--size-font-m) + 16px + (var(--spacing) * 4) * 2);
+}
